add aurora logs to local

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,9 @@
 region_name = us-east-1
 s3_bucket_name = jiangyu-rag
 
+[local]
+output_dir = /Users/seanguo/aurora-logs/
+
 [instances]
 # 多个实例ID，每行一个
 db_instance_identifiers = 
